WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254089
REGRESSION(
261320@main
): [GLib] Broke WebKitUserContentManager::script-message-received
https://bugs.webkit.org/show_bug.cgi?id=254089
Summary
REGRESSION(261320@main): [GLib] Broke WebKitUserContentManager::script-messag...
Michael Catanzaro
Reported
2023-03-17 13:25:28 PDT
In
261320@main
I forgot to update the marshaller used by WebKitUserContentManager::script-message-received. It worked perfectly fine in my development environment for whatever reason, but was broken in at least Ephy Tech Preview.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-03-17 13:31:03 PDT
Um, this is a speculative fix because I can't reproduce the crashes in my development environment, but it's correct and I'd be surprised if this isn't enough.
Michael Catanzaro
Comment 2
2023-03-17 13:40:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11664
EWS
Comment 3
2023-03-17 15:20:52 PDT
Committed
261810@main
(fa61ab3f2467): <
https://commits.webkit.org/261810@main
> Reviewed commits have been landed. Closing PR #11664 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug