REGRESSION(261320@main): [GLib] Broke WebKitUserContentManager::script-message-received https://bugs.webkit.org/show_bug.cgi?id=254089

Reviewed by Adrian Perez de Castro.

I forgot to update the marshaller used by
WebKitUserContentManager::script-message-received. It worked perfectly
fine in my development environment for whatever reason, but was broken
in at least Ephy Tech Preview.

* Source/WebKit/UIProcess/API/glib/WebKitUserContentManager.cpp:

Canonical link: https://commits.webkit.org/261810@main